--- a/client/src/styles/_layout.scss
+++ b/client/src/styles/_layout.scss
@@ -11,20 +11,20 @@
 
 header {
     width: 100%;
-    height: 20dvh;
-    // border: 1px solid black;
+    height: 5dvh;
+    border: 1px solid black;
 }
 
 main {
     width: 100%;
     min-height: 50dvh;
-    // border: 1px solid black;
+    border: 1px solid black;
 
 
 }
 
 footer {
-    // border: 1px solid black;
+    border: 1px solid black;
     width: 100%;
     height: 20dvh;
 
