--- a/client/src/styles/_layout.scss
+++ b/client/src/styles/_layout.scss
@@ -1,9 +1,5 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -11,16 +7,14 @@
 
 header {
     width: 100%;
-    height: 5dvh;
+    height: 20dvh;
+    // background-color: rgb(139, 45, 239);
     
 }
 
 main {
     width: 100%;
     min-height: 50dvh;
-   
-
-
 }
 
 footer {
