made some more styling and checked conditions for logged in to view orders and webshop etc.

--- a/client/src/styles/_layout.scss
+++ b/client/src/styles/_layout.scss
@@ -1,7 +1,7 @@
 #root {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+//   text-align: center;
+//   display: flex;
+//   flex-direction: column;
   width: 100%;
 }
 
