--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,11 +5,58 @@
   margin: 0;
   padding: 0;
   text-align: center;
-
+  color: black;
 }
 
 .error-message {
   color: red ;
   font-size: 20px;
+  background-color: white;
 }
 
+h2 {
+  color:#ef802b;
+}
+
+
+.login-link {
+    background-color: white;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+
+     &:hover {
+      text-decoration: underline;
+    }
+}
+
+.not-logged-in {
+  margin-top: 40px;
+  padding: 10px;
+}
+
+.start-page {
+  margin-top: 70px;
+}
+
+.orders {
+  margin-top: 70px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.confirmation {
+
+  margin-top: 60px;
+
+  a {
+    color: black;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  
+}
