--- a/client/src/styles/_forms.scss
+++ b/client/src/styles/_forms.scss
@@ -1,6 +1,6 @@
 
 input {
-  width: 500px;
+  width: 400px;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -9,15 +9,38 @@ input {
 }
 
 button {
-  background-color: rgb(139, 45, 239);
+  background-color: #ef802b;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 500px;
+  width: 400px;
 }
 
 button:hover {
   opacity: 0.8;
+}
+
+form {
+  background-color: white;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+
+
+.registration, .login-here {
+  padding-bottom: 20px;
+
+  a {
+    text-decoration: none;
+    color: rgb(244, 153, 62);
+    font-weight: bold;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
