--- a/client/src/styles/_layout.scss
+++ b/client/src/styles/_layout.scss
@@ -1,25 +1,31 @@
 #root {
-//   text-align: center;
-//   display: flex;
-//   flex-direction: column;
   width: 100%;
+ 
 }
 
 header {
     width: 100%;
-    height: 20dvh;
-    // background-color: rgb(139, 45, 239);
+    height: 30dvh;
+     background-image: url("../img/swedishfikanew.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 700px;
     
 }
 
 main {
     width: 100%;
-    min-height: 50dvh;
+    min-height: 40dvh;
 }
 
 footer {
-   
     width: 100%;
-    height: 20dvh;
+    height: 10dvh;
+}
 
+@media(max-width: 450px){
+    
+    header{
+        background-size: 450px;
+    }
 }
