--- a/client/src/styles/_navigation.scss
+++ b/client/src/styles/_navigation.scss
@@ -1,9 +1,10 @@
 
 
 nav {
-    margin-top: 20px;
+    margin-top: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    padding-right: 20px;
     gap: 15px;
     font-size: 20px;
     text-transform: uppercase;
@@ -11,11 +12,12 @@ nav {
     
     a {
         text-decoration: none;
-        color: rgb(12, 12, 12);
+        color: #D5A077;
         font-weight: bold;
 
         &:hover {
-            background-color: rgb(146, 89, 208);
+            background-color:#D5A077;
+            color: white;
         }
     }
 
